# SecOCTest

./: CMakeLists.txt  library.cpp  library.h
.github/workflows/: qodana_code_quality.yml
include/CCL/: CCL.cpp  CCL.h  VIA.h  VIA_ADAS.h  VIA_CAN.h  VIA_Ethernet.h  VIA_FunctionBus.h  VIA_LIN.h  VIA_SignalAccess.h  VIA_Socket.h
include/cmac/: AES-CMAC.c
src/: FreshnessValueManager.cpp  FreshnessValueManager.h
